# nx-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile
.agents/: CUTOVER_PLAYBOOK.md  LEARNINGS.md  MIGRATION_PLAN.md  SPEC.md  spec_traceability_matrix_v1.tsv
.agents/reports/cutover-gates/20260228T074322Z/: 00-summary.md  04-cutover-validation-report.md
.agents/reports/flake-cutover/20260228T075202Z/: 00-nix-config-git-status-short-branch.txt  00-summary.md  01-nix-config-git-status-porcelain.txt  02-nix-config-head.txt  03-shell-path.txt  04-nx-resolution-before.txt  20-nx-resolution-after.txt  21-nx-status-after.txt  22-nx-where-ripgrep-after.txt  24-nx-installed-ripgrep-json-after.txt  30-nix-config-git-status-short-branch-after.txt  31-nix-config-git-status-porcelain-after.txt  32-nix-config-diff-cutover-files.patch  35-clean-env-nx-where-ripgrep-after.txt  backup-flake.nix  backup-home-shell.nix  backup-packages-nix-cli.nix
.agents/reports/flake-rollback-drill/20260228T081016Z/: 00-summary.md  (+12 more)
.beads/: issues.jsonl
.cargo/: config.toml
.claude/hooks/: quality-gate.sh
.githooks/: pre-commit
docs/: CUTOVER_PLAYBOOK.md  LEARNINGS.md  MIGRATION_PLAN.md  SPEC.md
reference/nx-python/: README.md  ai_helpers.py  cache.py  claude_ops.py  cli.py  commands.py  config.py  finder.py  installed.py  nx  nx_printer.py  printer.py  pyproject.toml  retry_utils.py  search.py  shared.py  sources.py  test-nx-ux.sh
reference/nx-python/tests/: test_ai_paths.py  test_brew_outdated.py  test_cache.py  test_cli.py  test_cli_args.py  test_cli_end_to_end.py  test_commands.py  test_commands_system.py  test_config_finder.py  test_install_remove_integration.py  test_printer_layout.py  test_search.py  test_shared.py  test_sources.py  test_summarizer.py  test_upgrade_changelog.py
reference/nx-python/upgrade/: __init__.py  brew_outdated.py  changelog.py  summarizer.py
scripts/agent-hooks/: compile.sh  post-compile.sh  pre-compile.sh
scripts/cutover/: run_maintenance_gates.sh  validate_shadow_canary.sh
src/: app.rs  cli.rs  lib.rs  main.rs  nix_scan.rs
src/commands/: context.rs  install.rs  mod.rs  query.rs  remove.rs  search.rs  secret.rs  shared.rs  system.rs
src/commands/system/: mod.rs  rebuild.rs  test_cmd.rs  undo.rs  update.rs  upgrade.rs
src/domain/: config.rs  location.rs  mod.rs  plan.rs  source.rs  upgrade.rs
src/infra/: ai_engine.rs  cache.rs  config_scan.rs  file_edit.rs  finder.rs  flake_input.rs  mod.rs  query_info.rs  self_refresh.rs  shell.rs  sources.rs
src/output/: json.rs  mod.rs  printer.rs  style.rs
tests/: parity_harness.rs  support.rs  system_command_matrix.rs
tests/fixtures/parity/: cases.json
(+68 files in other folders)
