[package]
name = "nx-rs"
version = "1.0.0"
edition = "2024"
publish = false

[[bin]]
name = "nx"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
semicolon_if_nothing_returned = "warn"
