[project]
name = "nx"
version = "3.0.0"
description = "Multi-source package installer for nix-darwin"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "PLR0913",  # Too many arguments (cmd_install needs many)
    "PLR2004",  # Magic values (confidence thresholds)
    "E501",     # Line too long (handled by formatter)
]


[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
strict = false
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
exclude = [
    "^tests/",
]

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wcwidth"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tenacity"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer"
ignore_missing_imports = true
